# 3dseg

./: .gitignore  README.md  plot_data258.py  predict.py  pyproject.toml  setup.py  test_config.yml  train_config.yml
augment/: transformer-test.ipynb  transforms.py
configs/: .gitkeep  test-mps_config.yml  test_config.yml  test_config_BIIAX.yml  test_config_NEAPEL.yml  test_config__Neapel.yml  test_config_pore.yml  train-mps_config.yml  train_config.yml  train_config_BIIAX.yml  train_config_BIIAX_HPC.yml  train_config_NEAPEL.yml  train_config_Neapel.yml  train_config_RSNA.yml  train_config_RSNA_HPC.yml  train_config_pore.yml
configs/BIIAX/: test.yml  test_lowres_config.yml  train_config_BIIAX_HPC.yml  train_lowres_config.yml
configs/BIIAX/00-lowres-3c/: pred.yml  train.yml
configs/BIIAX/01-lowres-3c/: pred.yml  train.yml
configs/BIIAX/archiv/: test.yml  test_config_BIIAX.yml
configs/BIIAX/archiv/00-lowres-3c/: pred.yml
configs/BIIAX/archiv/model_128x128x128_00/: pred.yml  train.yml
configs/BIIAX/archiv/model_128x128x128_01/: pred.yml
configs/BIIAX/archiv/model_64x64x64_00/: train.yml
configs/BIIAX/model_128_03/: pred.yml  train.yml
configs/BIIAX/model_128x128x128_00/: pred.yml  train.yml
configs/BIIAX/model_128x128x128_01/: train.yml
configs/BIIAX/model_128x128x128_02/: pred.yml  train.yml
configs/BIIAX/model_64x64x64_00/: pred.yml  train.yml
configs/BIIAX/model_64x64x64_01/: pred.yml  train.yml
configs/BIIAX/model_96x96x96_00/: pred.yml  train.yml
configs/BIIAX_uCT/model_32x128x128_00/: pred.yml  train.yml
configs/DFG_benni/: pred.yml  train.yml
configs/Desy_philip/: pred.yml  train.yml
configs/NEAPEL/: test_config_NEAPEL.yml  train_config_NEAPEL.yml
configs/NEAPEL/model_64x64x64_bin/: config_pred.yml  config_train.yml  config_train_tester.yml
configs/OmniOpt/: train_config.yml
configs/PoreDetection/: pred.yml  pred_config_pore.yml  train.yml  train_config_pore.yml
configs/pore-detection/: pred_config_pore.yml  train_config_pore.yml
dataset_utils/: combine_hdf5.py  data_upload_labelbox.py  h5_read_mpi.py  h5_to_nrrd.py  image_to_hdf5.py  labelbox_export  rsna_dataset_conversion.py  split_hdf5.py  test_multiprocessing.py
dataset_utils/archiv/: combine_hdf5.py  data_upload_labelbox.py  image_to_hdf5.py  labelbox_export  mask_channel.py  nrrd_2_hdf5.py  split_hdf5.py  test_multiprocessing.py  txm2nrrd.py
datasets/: dsb.py
notebooks/: 00_combine_volume_label.ipynb  00_convert_h5-vti.ipynb  00_convert_raw2h5.ipynb  00_convert_raw2h5_simple.ipynb  00_convert_vol2h5.ipynb  00_convert_xrm2h5.ipynb  00_data_preparation_Philip.ipynb  01_convert_h52nrrd.ipynb  02_convert_nrrd2h5.ipynb  03_add_segnrrd2h5.ipynb  BIIAX_analyse_h5tonrrd.ipynb  Neapel_data-analysis.ipynb  RSNA_dataset.ipynb  SEG-VAE_try.ipynb  Segmentation08_05_23.nrrd  analysis_prediction.ipynb  cluster_data.ipynb  convert_dicom.ipynb  create_h5_data.ipynb  data_preparation.ipynb  dataloader_test.ipynb  export_tiff.ipynb  h5_convert_uint8.ipynb  instances_seg.ipynb  load_raw.ipynb  model_info.ipynb  nrrd_import.ipynb  pore-detection.ipynb  pore-detection_inspect.ipynb  segmentation.nrrd  show_data_set.ipynb  show_predictins.ipynb  subvolume.ipynb  subvolume_extractor.ipynb  subvolume_segmetation.ipynb  tensorboard_plotting.ipynb  torchinfo.ipynb  vol_show.ipynb
notebooks/CT_hys/: json_tester.ipynb  roi_tester.ipynb
pytorch-3dseg/datasets/: hdf5.py
pytorch-3dseg/utils/: predictor.py
scripts/: analyse_s2_c2.py  descriptor.py  predict.py  run_omniopt.py  train.py  train_test.py
scripts_sh/: NOTES.MD  predict.sh  run.sh  run_omniopt.sh  train.sh
slurm/: NOTES.MD  run.sh  run_omniopt.sh  train.sh
src/3dseg/datasets/: dsb.py
src/3dseg/descriptors/: descriptors.py
src/3dseg/utils/: data.py
src/torch3dseg/datasets/: utils.py
src/torch3dseg/models/: __init__.py  buildingblocks.py  model.py  nn.py
src/torch3dseg/utils/: buildingblocks.py  losses.py  model.py  trainer.py
torch3dseg/augment/: transforms.py
torch3dseg/datasets/: dsb.py  hdf5.py  utils.py
torch3dseg/descriptors/: descriptors.py
torch3dseg/utils/: buildingblocks.py  config.py  data.py  losses.py  metrics.py  model.py  predictor.py  trainer.py  utils.py
utils/: losses.py  utils.py
(+9 files in other folders)
