[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch3dseg"
version = "0.1.0"
description = "3D segmentation utilities based on PyTorch"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Christian Düreth" }]
keywords = ["pytorch", "segmentation", "3d", "medical-imaging", "volumetric"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy",
  "scikit-image",
  "tqdm",
  "tensorboard",
  "torchinfo",
  "h5py",
  "pynrrd",
  "PyYAML",
]

[project.optional-dependencies]
# PyTorch wheels vary by platform/CUDA. Users typically install torch/torchvision separately
# using the official PyTorch instructions. Keeping these extras is OK for convenience.
cpu = ["torch", "torchvision"]
gpu = ["torch", "torchvision"]

dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.4",
  "black>=24.0",
  "mypy>=1.8",
  "types-PyYAML",
  "build",
  "twine",
  "ipykernel",
]

docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9",
]

[project.urls]
Homepage = "https://github.com/<your-org-or-user>/torch3dseg"
Repository = "https://github.com/<your-org-or-user>/torch3dseg"
Issues = "https://github.com/<your-org-or-user>/torch3dseg/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["torch3dseg*"]

# -----------------------
# Tooling configuration
# -----------------------
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]